<resources>
    <string name="app_name">Lecretsi</string>
    <string name="title_activity_conversations">Coversations</string>


    <string name="login_lecretsi_greeting">Bienvenue à Lecretsi</string>
    <string name="login_lecretsi_subtitle">Le mode génial d\'envoyer des messages secrets</string>


    <string name="navigation_drawer_open">Ouvrir le menu latéral</string>
    <string name="navigation_drawer_close">Fermez le menu latéral</string>


    <string name="action_settings">Préférences</string>


    <string name="user_not_found">Nous n\'avons pas trouvé votre ami</string>
    <string name="no_email_inserted">Veuillez insérer une adresse de e-mail</string>
    <string name="add_friend">Ajouter ami</string>
    <string name="friend_request_sent">La sollicitation d\'amitié a été envoyée</string>
    <string name="send_a_friend_request">Envoyer demande d\'amitié</string>
    <string name="your_friend_s_email">L\'email de votre ami</string>
    <string name="friend_already_added">Vous êtes déjà amis</string>
    <string name="friend_req_already_sent">Demande d\'amitié déjà envoyée</string>


    <string name="login_connection_failed"> La connexion a échoué</string>
    <string name="play_services_connection_error">
        Impossible de se connecter au service du Google."</string>
    <string name="login_to_continue">Connectez-tes pour continuer s\'il tous plaît</string>


    <string name="assistant_greeting">Bonjour</string>
    <string name="assistant_presentation">
        Je suis votre assistant personnel de Largonji</string>
    <string name="assistant_expect_response">Que voulez-vous que je traduise?</string>
    <string name="assistant_anything_else">Autre chose?</string>
    <string name="assistant_anything_else2">Que dois-je traduire?</string>
    <string name="error_self_request">Ce n\'était pas très spirituel</string>
    <string name="assistant_start_phrase">Voilà</string>
    <string name="assistant_code_hint">Tapez #encrypt et je chiffrerai tous les messages qui suivent dans Largonji</string>
    <string name="assistant_decode_hint">Tapez #decrypt et je vais les déchiffrer</string>
    <string name="to_normal">#decrypt</string>
    <string name="to_largonji">#encrypt</string>
    <string name="assistant_was_set_decrypt">Je décrypterai les messages</string>
    <string name="assistant_was_set_to_encrypt">Je vais chiffrer les messages</string>


    <string name="this_is_not_a_friend">Ce n\'est pas un ami</string>
    <string name="this_is_not_a_friend_add_one_from_button">
        Utiliser le bouton pour ajouter un ami</string>

    <string name="activity_conversation">Lecretsi</string>
    <string name="activity_friends">Copains</string>
    <string name="activity_about_us">Les auteurs</string>
    <string name="learn_activity">Practise</string>
    <string name="activity_log_out">Sortir</string>
    <string name="activity_settings">Préférences</string>
    <string name="menu_interactivity">Interactivité</string>

    <string name="friend_requests">Demandes d\'amitié</string>
    <string name="largonji_friends">Lecretsi copains</string>
    <string name="no_conversations_yet">Aucune conversation encore</string>
    <string name="friend_request_pending">Tu as une demande d\'amitié en attente de cet utilisateur</string>
    <string name="double_press_close">Appuye de nouveau le buton de retour pour sortir</string>
    <string name="menu_conversation">Conversation</string>
    <string name="conversation_menu">Conversation</string>

    <string name="archive">Archiver</string>
    <string name="delete">Effacer</string>
    <string name="block">Bloc</string>
    <string name="dialog_delete_message">La suppression ne peut pas être annulée</string>
    <string name="dialog_delete_title">Supprimer cette conversation?</string>
    <string name="cancel">Cancel</string>

    <string name="about_dev_title">Les auteurs</string>
    <string name="about_dev_text">
        Bratu Andrei\nhttps://github.com/andreibratu\nAdi Popa\nhttps://github.com/AdiPoPa</string>
    <string name="about_testers_title">Pour nos fidèles testeurs</string>
    <string name="about_testers_text">Anca Diana\nPicovici Luca</string>

    <string name="no_conversations_tip">Les conversations ouvertes doivent y apparaître</string>
    <string name="could_not_decrypt1">Je ne peux pas decrypter le message</string>
    <string name="could_not_decrypt2">Je t\'en prie d\'introduire un phrase en Largonji</string>
    <string name="type_a_message">Ècris un message…</string>


    <string name="largonji_assistant">Largonji Assistant</string>
    <string name="firstname_lastname">Firstname Lastname</string>
    <string name="the_quick_brown_fox_jumped_over_the_lazy_dog">Le rapide renard brun sauta par dessus le chien paresseux</string>

    <string name="request_update">Vous utilisez une ancienne version de cette application, pensez à la mettre à jour</string>
    <string name="update_link"><u>https://github.com/andreibratu/Lecretsi/releases</u></string>
</resources>
