<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center"
    android:weightSum="1"
    tools:context="com.glimpse.lecretsi.AboutActivity">

    <TextView
        android:gravity="center"
        android:text="@string/about_dev_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="36sp"
        android:textStyle="bold"
        android:layout_weight="0.2"
        android:id="@+id/developers_title" />

    <TextView
        android:gravity="center"
        android:text="@string/about_dev_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_weight="0.2"
        android:id="@+id/testers_title" />

    <TextView
        android:gravity="center"
        android:text="@string/about_testers_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:textStyle="bold"
        android:textSize="24sp"
        android:id="@+id/testers_text" />

    <TextView
        android:text="@string/about_testers_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:textSize="16sp"
        android:id="@+id/developers_text" />

    <ImageView
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="128dp"
        app:srcCompat="@drawable/cfa_logo"
        android:layout_weight="0.2"
        android:id="@+id/imageView" />

</LinearLayout>
