<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:padding="10dp"
        android:text="@string/conversation_menu"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/colorDarkGrey"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/dividerLine"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:src="@color/colorDarkGrey" />

    <LinearLayout
        android:id="@+id/archive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginTop="10dp"
        android:background="?android:selectableItemBackground"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:src="@drawable/ic_menu_archive"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/archive"
            android:textSize="16sp"
            android:textColor="@color/colorDarkGrey" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:background="?android:selectableItemBackground"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:src="@drawable/ic_menu_delete"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/delete"
            android:textSize="16sp"
            android:textColor="@color/colorDarkGrey" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:background="?android:selectableItemBackground"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:src="@drawable/ic_menu_block"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/block"
            android:textSize="16sp"
            android:textColor="@color/colorDarkGrey" />

    </LinearLayout>

</LinearLayout>